tooling/nargo_cli/tests/snapshots/compile_failure/assert_constant_dynamic_tuple/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Argument is not constant
  ┌─ src/main.nr:4:5
  │
4 │     assert_constant((dynamic_one, 2));
  │     ---------------------------------
  │
  = Call stack:
    1. src/main.nr:4:5

Aborting due to 1 previous error
